# speed_test

./: .gitignore  docker-compose.yaml  nim_Dockerfile  pypy_Dockerfile  python_Dockerfile
src/nim/: speed_test.nimble
src/nim/src/: main.nim
src/nim/src/controllers/: SampleController.nim
src/nim/src/services/domain_services/: SampleService.nim
src/python/: pyproject.toml  pypyrun.sh  pythonrun.sh  requirements.txt
src/python/app/: urls.py
src/python/app/controllers/: sample_controller.py
src/python/app/services/: application_service.py
src/python/app/services/domain_services/: sample_service.py
src/python/project/: settings.py  urls.py
