[tool.poetry]
name = "speed_test_python"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6"
django = "^2.2"
djangorestframework = "^3.10"
gunicorn = "^19.9"

[tool.poetry.dev-dependencies]
pylint = "^2.3"
pyformat = "^0.7.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
